--- a/themes/default/templates/projects/area_list.html
+++ b/themes/default/templates/projects/area_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "projects/project_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
@@ -6,26 +6,37 @@
 
 {% block meta_title %}{% trans "Areas" %}{% endblock %}
 
+{% block subtitle %}{% trans "Areas" %}{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
-    {% add_crumb project project.get_absolute_url %}
+    {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Areas' %}
     {% render_breadcrumbs %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{% trans "Areas" %}</h1>
-</div>
+{% block menu %}
+{% if perms.projects.change_project %}
+<li><a href="{{ object.get_absolute_url }}">{% trans 'Dashboard' %}</a></li>
+{% endif %}
+{% if perms.projects.change_area %}
+<li class="active"><a href="{% url area_list object.slug %}">{% trans 'Areas' %}</a></li>
+{% endif %}
+{% if perms.projects.change_milestone %}
+<li><a href="{% url milestone_list object.slug %}">{% trans 'Milestones' %}</a></li>
+{% endif %}
+{% if perms.projects.change_ticket %}
+<li><a href="{% url ticket_list object.slug %}">{% trans 'Tickets' %}</a></li>
+{% endif %}
 {% endblock %}
 
-{% block main %}
+{% block section %}
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
         {% if perms.projects.add_area %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url area_add project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url area_add object.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
