--- a/themes/default/templates/projects/milestone.html
+++ b/themes/default/templates/projects/milestone.html
@@ -1,14 +1,14 @@
 {% load i18n %}
 
-<dt{% if object.closed %} class="closed"{% else %}{% if object.expired %} class="expired"{% endif %}{% endif %}>
-    <h3><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></h3>
+<dt{% if milestone.closed %} class="closed"{% else %}{% if milestone.expired %} class="expired"{% endif %}{% endif %}>
+    <h3><a href="{{ milestone.get_absolute_url }}">{{ milestone.title }}</a></h3>
     <span class="actions">
         <ul>
             {% if perms.projects.edit_milestone %}
-            <li class="edit"><a title="{% trans "Edit" %}" href="{{ object.get_edit_url }}">{% trans "Edit" %}</a></li>
+            <li class="edit"><a title="{% trans "Edit" %}" href="{{ milestone.get_edit_url }}">{% trans "Edit" %}</a></li>
             {% endif %}
             {% if perms.projects.delete_milestone %}
-            <li class="delete"><a title="{% trans "Delete" %}" href="{{ object.get_delete_url }}">{% trans "Delete" %}</a></li>
+            <li class="delete"><a title="{% trans "Delete" %}" href="{{ milestone.get_delete_url }}">{% trans "Delete" %}</a></li>
             {% endif %}
         </ul>
     </span>
@@ -17,13 +17,13 @@
     <p class="meta">
         <strong>{% trans "Deadline" %}:</strong>
         <span>
-            {% if object.date_due %}
-            {{ object.date_due }}
-            {% if object.expired %}
-            <span class="delay">({{ object.date_due|timesince }} {% trans "overdue" %})</span>
+            {% if milestone.date_due %}
+            {{ milestone.date_due }}
+            {% if milestone.expired %}
+            <span class="delay">({{ milestone.date_due|timesince }} {% trans "overdue" %})</span>
             {% else %}
-            {% if not object.closed and object.date_due %}
-            <span class="countdown">({{ object.date_due|timeuntil }})</span>
+            {% if not milestone.closed and milestone.date_due %}
+            <span class="countdown">({{ milestone.date_due|timeuntil }})</span>
             {% endif %}
             {% endif %}
             {% else %}
@@ -32,14 +32,14 @@
         </span>
         -
         <strong>{% trans "Tickets" %}:</strong>
-        <span><a href="{% url milestone_tickets object.project.slug object.slug %}">{{ object.tickets.closed.count }}/{{ object.tickets.count }}</a></span>
+        <span><a href="{% url milestone_tickets milestone.project.slug milestone.slug %}">{{ milestone.tickets.closed.count }}/{{ milestone.tickets.count }}</a></span>
     </p>
     {% include "projects/milestone_progress.html" %}
-    {{ object.description|safe }}
-    {% if object.sub_milestones.all %}
-    {% with object.sub_milestones.all as object_list %}
+    {{ milestone.description|safe }}
+    {% if milestone.sub_milestones.all %}
+    {% with milestone.sub_milestones.all as milestone_list %}
     <dl class="milestones">
-        {% for object in object_list %}
+        {% for milestone in milestone_list %}
         {% include 'projects/milestone.html' %}
         {% endfor %}
     </dl>
