--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -3,11 +3,10 @@
 {% load i18n %}
 {% load markup %}
 {% load breadcrumbs %}
+{% load navigator %}
 {% load region %}
 
 {% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
-{% if object.description %}{% block meta_description %}{{ object.description|striptags|capfirst }}{% endblock %}{% endif %}
-{% if object.tags.all %}{% block meta_keywords %}{{ object.tags.all|join:", " }}{% endblock %}{% endif %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -21,13 +20,7 @@
 {% block title %}
 <div class="title">
     <h1>{{ object|escape|capfirst }}</h1>
-    <div class="menu">
-        <ul>
-            {% if perms.projects.change_ticket %}
-            <li><a href="{% url milestone_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
-            {% endif %}
-        </ul>
-    </div>
+    <h2>{% block subtitle %}{% trans "Dashboard" %}{% endblock %}</h2>
 </div>
 {% endblock %}
 
@@ -48,73 +41,94 @@
         {% endif %}
     </ul>
 </div>
+{% objects_from object %}
+{% with objects as object_list %}
 {% include 'elements/navigator.html' %}
+{% endwith %}
 <div class="details">
-    <table class="properties">
-        <tr>
-            <th>{% trans "Manager" %}:</th>
-            <td colspan="3">
-                {% if object.parent %}
-                <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
+    <div class="sections">
+        <div class="menu">
+            <ul>
+                {% block menu %}
+                {% if perms.projects.change_milestone %}
+                <li class="active"><a href="{{ object.get_absolute_url }}">{% trans 'Dashboard' %}</a></li>
                 {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Created by" %}:</th>
-            <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
-            <th>{% trans "Created on" %}:</th>
-            <td>{{ object.created }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Parent" %}:</th>
-            <td>
-                {% if object.parent %}
-                <a class="parent" href="{{ object.parent.get_absolute_url }}">{{ object.parent }}</a>
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
+                {% if perms.projects.change_ticket %}
+                <li><a href="{% url milestone_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
                 {% endif %}
-            </td>
-            <th>{% trans "Date due" %}:</th>
-            <td>
-                {% if object.date_due %}
-                {{ object.date_due }}
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Progress" %}:</th>
-            <td>{{ object.progress }}%</td>
-            <th>{% trans "Closed on" %}:</th>
-            <td>
-                {% if object.closed %}
-                {{ object.closed }}
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
-        </tr>
-        <tr>
-            <th>{% trans "Tags" %}:</th>
-            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Categories" %}:</th>
-            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Description" %}:</th>
-            <td colspan="3">
-                {% with object.description as description %}
-                {% include "projects/entry.html" %}
-                {% endwith %}
-            </td>
-        </tr>
-    </table>
-    {% region object.dashboard %}
+                {% endblock %}
+            </ul>
+        </div>
+        <div class="section">
+            {% block section %}
+            <table class="properties">
+                <tr>
+                    <th>{% trans "Manager" %}:</th>
+                    <td colspan="3">
+                        {% if object.parent %}
+                        <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
+                        {% else %}
+                        <span class="disabled">{% trans "empty" %}</span>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th>{% trans "Created by" %}:</th>
+                    <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
+                    <th>{% trans "Created on" %}:</th>
+                    <td>{{ object.created }}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Parent" %}:</th>
+                    <td>
+                        {% if object.parent %}
+                        <a class="parent" href="{{ object.parent.get_absolute_url }}">{{ object.parent }}</a>
+                        {% else %}
+                        <span class="disabled">{% trans "empty" %}</span>
+                        {% endif %}
+                    </td>
+                    <th>{% trans "Date due" %}:</th>
+                    <td>
+                        {% if object.date_due %}
+                        {{ object.date_due }}
+                        {% else %}
+                        <span class="disabled">{% trans "empty" %}</span>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th>{% trans "Progress" %}:</th>
+                    <td>{{ object.progress }}%</td>
+                    <th>{% trans "Closed on" %}:</th>
+                    <td>
+                        {% if object.closed %}
+                        {{ object.closed }}
+                        {% else %}
+                        <span class="disabled">{% trans "empty" %}</span>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th>{% trans "Tags" %}:</th>
+                    <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Categories" %}:</th>
+                    <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+                </tr>
+                <tr>
+                    <th>{% trans "Description" %}:</th>
+                    <td colspan="3">
+                        {% with object.description as description %}
+                        {% include "projects/entry.html" %}
+                        {% endwith %}
+                    </td>
+                </tr>
+            </table>
+            {% region object.dashboard %}
+            {% endblock %}
+        </div>
+    </div>
 </div>
 {% include "elements/comments.html" %}
 {% endblock %}
