--- a/themes/default/templates/projects/milestone_tickets.html
+++ b/themes/default/templates/projects/milestone_tickets.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends "projects/milestone_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
 
 {% block meta_title %}{% trans "Tickets" %}{% endblock %}
+
+{% block subtitle %}{% trans "Tickets" %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -16,13 +18,16 @@
     {% render_breadcrumbs %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{% trans "Tickets" %}</h1>
-</div>
+{% block menu %}
+{% if perms.projects.change_milestone %}
+<li><a href="{{ object.get_absolute_url }}">{% trans 'Dashboard' %}</a></li>
+{% endif %}
+{% if perms.projects.change_ticket %}
+<li class="active"><a href="{% url milestone_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
+{% endif %}
 {% endblock %}
 
-{% block main %}
+{% block section %}
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
