--- a/themes/default/templates/projects/ticket_list.html
+++ b/themes/default/templates/projects/ticket_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "projects/project_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
@@ -6,12 +6,15 @@
 
 {% block meta_title %}{% trans "Tickets" %}{% endblock %}
 
+{% block subtitle %}{% trans "Tickets" %}{% endblock %}
+
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
-    {% add_crumb project project.get_absolute_url %}
+    {% add_crumb object object.get_absolute_url %}
     {% if milestone %}
-    {% add_crumb 'Tickets' 'ticket_list' project.slug %}
+    {% add_crumb 'Tickets' 'ticket_list' object.slug %}
     {% add_crumb milestone %}
     {% else %}
     {% add_crumb 'Tickets' %}
@@ -19,18 +22,27 @@
     {% render_breadcrumbs %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{% trans "Tickets" %}</h1>
-</div>
+{% block menu %}
+{% if perms.projects.change_project %}
+<li><a href="{{ object.get_absolute_url }}">{% trans 'Dashboard' %}</a></li>
+{% endif %}
+{% if perms.projects.change_area %}
+<li><a href="{% url area_list object.slug %}">{% trans 'Areas' %}</a></li>
+{% endif %}
+{% if perms.projects.change_milestone %}
+<li><a href="{% url milestone_list object.slug %}">{% trans 'Milestones' %}</a></li>
+{% endif %}
+{% if perms.projects.change_ticket %}
+<li class="active"><a href="{% url ticket_list object.slug %}">{% trans 'Tickets' %}</a></li>
+{% endif %}
 {% endblock %}
 
-{% block main %}
+{% block section %}
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
         {% if perms.projects.add_ticket %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add object.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
