Improved style and layout of search results.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@322 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -495,6 +495,12 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .menu li li a { padding-left: 40px; }
 
+#content .result-list li {
+    border-bottom: 1px solid #e6e6e6;
+    padding: 10px 0;
+    background: none;
+}
+
 #content .messages {
     width: 100%;
     border: 1px solid #ffda88;
