--- a/themes/default/templates/taxonomy/search.html
+++ b/themes/default/templates/taxonomy/search.html
@@ -22,17 +22,18 @@
 {% endblock %}
 
 {% block main %}
-{% if object_list %}
-<ul class="result-list">
-    {% for object in object_list %}
-    <li class="result">
-        <strong>{% trans object.content_type.name|title %}</strong>: <a href="{{ object.get_absolute_url }}">{{ object.title|title }}</a>
-    </li>
-    {% endfor %}
-</ul>
-{% else %}
-<span class="disabled">{% trans "No results found." %}</span>
-{% endif %}
-
-{% include "elements/paginator.html" %}
+<div class="details">
+    {% if object_list %}
+    <ul class="result-list">
+        {% for object in object_list %}
+        <li class="result">
+            <strong>{% trans object.content_type.name|title %}</strong>: <a href="{{ object.get_absolute_url }}">{{ object.title|title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <span class="disabled">{% trans "No results found." %}</span>
+    {% endif %}
+    {% include "elements/paginator.html" %}
+</div>
 {% endblock %}
