--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -6,10 +6,10 @@
 {% get_comment_list for object as comment_list %}
 {% if comment_list or object.allow_comments %}
 <div class="comments">
-    {% if comment_list %}
     <h3>{% trans "Comments" %}</h3>
+    {% if comment_list %}
     <ul>
-    {% for comment in comment_list %}
+        {% for comment in comment_list %}
         <li class="comment">
             {% with comment.user_name as user_name %}
             {% with comment.user.get_absolute_url as user_link %}
@@ -23,13 +23,15 @@
             {% endwith %}
             {{ comment.comment|markdown }}
         </li>
-    {% endfor %}
+        {% endfor %}
     </ul>
     {% get_comment_count for object as comment_count %}
     <p class="comment-counter">{% blocktrans %}<strong>{{ comment_count }}</strong> comment(s){% endblocktrans %}</p>
+    {% else %}
+    <p class="disabled">{% trans "No comments." %}</p>
     {% endif %}
     {% if object.allow_comments %}
-    <a name="add_comment"></a><h3>{% trans "Add comment" %}</h3>
+    <h3>{% trans "Add comment" %}</h3>
     {% get_comment_form for object as form %}
     <form action="{% comment_form_target %}" method="post">
         {% csrf_token %}
