- Added "notifications" app. - Improved the "user_detail" view.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@326 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -195,6 +195,7 @@ INSTALLED_APPS = (
     'prometeo.core.menus',
     'prometeo.core.auth',
     'prometeo.core.registration',
+    'prometeo.core.notifications',
     'prometeo.core.taxonomy',
 
     #'prometeo.todo',
