--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -48,6 +48,7 @@
             {% block menu %}
             <li class="active"><a href="{{ object.get_absolute_url }}">{% trans 'Profile' %}</a></li>
             <li><a href="{% url bookmark_list %}">{% trans 'Bookmarks' %}</a></li>
+            <li><a href="{% url notification_list %}">{% trans 'Notifications' %}</a></li>
             {% endblock %}
         </ul>
     </div>
@@ -66,6 +67,10 @@
                 </dd>
                 <dt class="joined">{% trans 'Joined on' %}</dt>
                 <dd>{{ object.date_joined }}</dd>
+                <dt class="joined">{% trans 'Group(s):' %}</dt>
+                <dd>
+                {% for group in object.groups.all %}{{ group }}{% if not forloop.last %}, {% else %}.{% endif %}{% empty %}<span class="disabled">{% trans "No groups." %}</span>{% endfor %}
+                </dd>
             </dl>
         </div>
         {% endblock %}
