--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -4,31 +4,26 @@
 {% load breadcrumbs %}
 {% load details %}
 
-{% block meta_title %}{% trans "Bookmarks" %}{% endblock %}
+{% block meta_title %}{% trans "Notifications" %}{% endblock %}
 
-{% block subtitle %}{% trans "Bookmarks" %}{% endblock %}
+{% block subtitle %}{% trans "Notifications" %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
     {% add_crumb user user.get_absolute_url %}
-    {% add_crumb 'Bookmarks' %}
+    {% add_crumb 'Notifications' %}
     {% render_breadcrumbs %}
 {% endblock %}
 
 {% block menu %}
 <li><a href="{{ object.get_absolute_url }}">{% trans 'Profile' %}</a></li>
-<li class="active"><a href="{% url bookmark_list %}">{% trans 'Bookmarks' %}</a></li>
-<li><a href="{% url notification_list %}">{% trans 'Notifications' %}</a></li>
+<li><a href="{% url bookmark_list %}">{% trans 'Bookmarks' %}</a></li>
+<li class="active"><a href="{% url notification_list %}">{% trans 'Notifications' %}</a></li>
 {% endblock %}
 
 {% block section %}
 {% include 'elements/filterbox.html' %}
-<div class="actions">
-    <ul>
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url bookmark_add %}">{% trans 'Add' %}</a></li>
-    </ul>
-</div>
 <div class="details">
     {% detail_table object_list field_names %}
     {% include 'elements/paginator.html' %}
