--- a/themes/default/templates/notifications/notification_list.html
+++ b/themes/default/templates/notifications/notification_list.html
@@ -27,5 +27,10 @@
 <div class="details">
     {% detail_table object_list field_names %}
     {% include 'elements/paginator.html' %}
+    <form class="notification-form" method="post" action=".">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
+    </form>
 </div>
 {% endblock %}
