Views of "notifications" and "menus (bookmarks)" apps are now related to the user specified in the URL.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@330 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -47,8 +47,8 @@
         <ul>
             {% block menu %}
             <li class="active"><a href="{{ object.get_absolute_url }}">{% trans 'Profile' %}</a></li>
-            <li><a href="{% url bookmark_list %}">{% trans 'Bookmarks' %}</a></li>
-            <li><a href="{% url notification_list %}">{% trans 'Notifications' %}</a></li>
+            <li><a href="{% url bookmark_list object.username %}">{% trans 'Bookmarks' %}</a></li>
+            <li><a href="{% url notification_list object.username %}">{% trans 'Notifications' %}</a></li>
             {% endblock %}
         </ul>
     </div>
