--- a/themes/default/templates/elements/bookmarks.html
+++ b/themes/default/templates/elements/bookmarks.html
@@ -2,6 +2,6 @@
 {% load menu %}
 
 {% if user.is_authenticated %}
-<span class="add"><a title="Bookmark this page." href="{% url bookmark_add %}">{% trans '+' %}</a></span>
+<span class="add"><a title="Bookmark this page." href="{% url bookmark_add user.username %}">{% trans '+' %}</a></span>
 {% menu user.get_profile.bookmarks.slug %}
 {% endif %}
