--- a/themes/default/templates/auth/userarea.html
+++ b/themes/default/templates/auth/userarea.html
@@ -5,7 +5,7 @@
 <span class="profile">
     <a href="{% url user_detail user.username %}"><strong>{{ user }}</strong></a>
     {% with user.notification_set.unread|length as notification_count %}
-    <a class="notification-counter" title="{% blocktrans %}{{ notification_count }} unred notification(s){% endblocktrans %}" href="{% url notification_list %}">{{ notification_count }}</a>
+    <a class="notification-counter" title="{% blocktrans %}{{ notification_count }} unred notification(s){% endblocktrans %}" href="{% url notification_list user.username %}">{{ notification_count }}</a>
     {% endwith %}
 </span>
 {% menu "user_area_logged" %}
