--- a/themes/default/templates/menus/bookmark_delete.html
+++ b/themes/default/templates/menus/bookmark_delete.html
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url bookmark_delete object.slug %}">
+<form method="post" action="{% url bookmark_delete user.username object.slug %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this bookmark?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
