--- a/themes/default/templates/menus/bookmark_delete.html
+++ b/themes/default/templates/menus/bookmark_delete.html
@@ -9,7 +9,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
     {% add_crumb user user.get_absolute_url %}
-    {% add_crumb 'Bookmarks' 'bookmark_list' %}
+    {% add_crumb 'Bookmarks' 'bookmark_list' user.username %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
     {% render_breadcrumbs %}
