--- a/themes/default/templates/menus/bookmark_delete.html
+++ b/themes/default/templates/menus/bookmark_delete.html
@@ -8,7 +8,7 @@
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
-    {% add_crumb user user.get_absolute_url %}
+    {% add_crumb object_user object_user.get_absolute_url %}
     {% add_crumb 'Bookmarks' 'bookmark_list' user.username %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url bookmark_delete user.username object.slug %}">
+<form method="post" action="{% url bookmark_delete object_user.username object.slug %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this bookmark?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
