--- a/themes/default/templates/menus/bookmark_list.html
+++ b/themes/default/templates/menus/bookmark_list.html
@@ -11,22 +11,22 @@
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' 'user_list' %}
-    {% add_crumb user user.get_absolute_url %}
+    {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Bookmarks' %}
     {% render_breadcrumbs %}
 {% endblock %}
 
 {% block menu %}
 <li><a href="{{ object.get_absolute_url }}">{% trans 'Profile' %}</a></li>
-<li class="active"><a href="{% url bookmark_list user.username %}">{% trans 'Bookmarks' %}</a></li>
-<li><a href="{% url notification_list user.username %}">{% trans 'Notifications' %}</a></li>
+<li class="active"><a href="{% url bookmark_list object.username %}">{% trans 'Bookmarks' %}</a></li>
+<li><a href="{% url notification_list object.username %}">{% trans 'Notifications' %}</a></li>
 {% endblock %}
 
 {% block section %}
 {% include 'elements/filterbox.html' %}
 <div class="actions">
     <ul>
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url bookmark_add user.username %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a title="{% trans 'Add' %}" href="{% url bookmark_add object.username %}">{% trans 'Add' %}</a></li>
     </ul>
 </div>
 <div class="details">
